# planit-ai

./: .dockerignore  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  firebase.json  package-lock.json
server/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
server/app/: dependencies.py  main.py
server/app/core/: config.py  db.py  security.py
server/app/crud/: __init__.py  base.py  basic_chat.py  chat.py  chat_crud.py  class_.py  course_crud.py  evaluation_crud.py  event.py  event_crud.py  files.py  files_crud.py  import_plan.py  lecture_crud.py  lesson.py  personal_event.py  rich_chat.py  routine_crud.py  schedule.py  schedule_override.py  semester.py  user.py
server/app/llm_tools/: __init__.py  course_tools.py  evaluation_tools.py  event_tools.py  lecture_tools.py  misc_tools.py  user_tools.py
server/app/models/: __init__.py  chat_message_model.py  class_.py  course.py  course_file.py  course_file_model.py  course_model.py  evaluation_model.py  event_model.py  file_model.py  lecture_model.py  lesson.py  operation_model.py  personal_event.py  routine_model.py  schedule.py  schedule_override.py  semester.py  user_model.py
server/app/routers/: __init__.py  api.py  basic_chat.py  chat.py  chat_router.py  classes.py  course_router.py  files.py  (+13 more)
server/examples/: import_plan_example.json
server/scripts/: .gitignore  dump_json_schemas.py  print_settings.py  seed_db.py  trim_chat_history_and_context.py
server/tests/: mock_models.py
(+89 files in other folders)
